Pressure tab: Trapezoid scene: Fixed: Pressure doesn't update as water is added
Pressure tab: Chamber scene: Added draggable masses
Pressure tab: hide potted plant for scenes 2-3
Pressure tab: Chamber scene: Added container shape
Pressure tab: Account for gravity in pressure computation
Pressure tab: Trapezoid scene: Added pressure model which accounts for partially filled pool
Pressure tab: Trapezoid scene: Fixed: Water comes out of faucet even when pool is full
Pressure tab: Trapezoid scene: Update faucet fluid color based on the density of the fluid
Pressure tab: Trapezoid scene: Made scene radio buttons non-square
Pressure tab: Trapezoid scene: Fill pool when water flows
Pressure tab: Added water flowing from the faucet as a solid rectangle
Pressure tab: Removed background from radio button strip
Flow tab & Water tower tab: Added slow/full speed buttons and pause (like ESPB)
Pressure tab: Trapezoid scene: Added a faucet (not wired up)
Pressure tab: Added image icons for scene radio button strip
Pressure tab: Added trapezoidal shape for pool
Pressure tab: Added a toolbox for pressure sensors
Pressure tab: Increased number of pressure sensors
# 0.00.47 (60952) Feb 2, 2012
Improved layout for control panels
Fixed: Pressure gauges change number of digits when atmosphere turns on/off
Updated model to handle atmosphere on/off
Made sky black when atmosphere is off
Added an Atmosphere control to the control panel
Added a grid node
Simsharing: add UserComponent chaining for FaucetNode and its FaucetSlider
Changes to FPAFFaucetNode, required by cleanup of FaucetNode base class, see #3199
# 0.00.46 (58668) Nov 16, 2011
# 0.00.45 (58667) Nov 16, 2011
# 0.00.44 (58665) Nov 16, 2011
Made it so the dye button can't be pressed repeatedly
Converted line of dye to grid of dots
Position the meter stick so that its origin is at the top of the pool since the rulers measure down in this tab
Removed man graphic since students may think he is supposed to do something