@@ -1,3 +1,4 @@
+Pressure tab: Initial scene: Fixed: dragging bounds for pressure sensors not respected
 Pressure tab: Trapezoid scene: Fixed: Pressure doesn't update as water is added
 Pressure tab: Chamber scene: Added draggable masses
 Pressure tab: hide potted plant for scenes 2-3
